UtahLiveDataTest/src/objects/RolesAndResponsibilities__c.object
<CustomObject>
    <description>[Business] Roles and Responsibilities defined for all the objects like Opportunity ,Application etc</description>
    <fields>
        <fullName>Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AmendmentRequest__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Amendment Request</label>
        <referenceTo>AmendmentRequest__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Announcement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Announcement__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Award__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Award</label>
        <referenceTo>Award__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BatchSharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Batch Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BusinessRoleUSBE__c</fullName>
        <label>BusinessRoleUSBE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Owner</fullName>
                </value>
                <value>
                    <fullName>Grants Manager</fullName>
                </value>
                <value>
                    <fullName>Payment Approver 1</fullName>
                </value>
                <value>
                    <fullName>Payment Approver 2</fullName>
                </value>
                <value>
                    <fullName>Payment Approver 3</fullName>
                </value>
                <value>
                    <fullName>Payment Approver 4</fullName>
                </value>
                <value>
                    <fullName>Executive Approver</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BusinessRole__c</fullName>
        <description>This is a picklist which will be displayed in RR table in all phases.</description>
        <label>Business Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>BusinessRole</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ChangeChildObjects__c</fullName>
        <label>ChangeChildObjects</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Only This Record</fullName>
                </value>
                <value>
                    <fullName>Update All Derivative Records</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Closeout__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closeout</label>
        <referenceTo>Closeout__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EmailNotificationStatus__c</fullName>
        <description>This field is used to determine the status of email notification to the role.</description>
        <label>Email Notification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FINETProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FINETProgram</label>
        <referenceTo>r_prog__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>RolesandResponsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FormsValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Forms Validated?</description>
        <label>Forms Validated ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GrantLookupId__c</fullName>
        <formula>IF (Award__c != null, Award__r.Grant__c, IF (Closeout__c != null, Closeout__r.Grant__c, &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GrantLookupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Grant</label>
        <referenceTo>Grant__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>RolesandResponsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GranteeApproved__c</fullName>
        <description>This field is created because we want to hide the Edit Field</description>
        <formula>Application__r.GranteeDisplayEdit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grantee Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementDelete__c</fullName>
        <formula>OR(ISPICKVAL(Announcement__r.Status__c , &apos;RFA Published&apos;),
AND(Announcement__r.RFARequired__c==false ,ISPICKVAL(Announcement__r.Status__c , &apos;Published&apos;)),
ISPICKVAL(Announcement__r.Status__c , &apos;Approved&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;Rejected&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;RFA Approved&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;RFA Rejected&apos;),
ISPICKVAL(Announcement__r.Status__c, &apos;Submitted for Approval&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;RFA Submitted for Approval&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;Closed&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;Archived&apos;),
ISPICKVAL(Announcement__r.Status__c , &apos;Converted to Application&apos;),
ISPICKVAL(Announcement__r.Status__c, &apos;Converted to Pre-Application&apos;)
)|| ISPICKVAL(BusinessRole__c, &apos;Owner&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Announcement Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideAnnouncementEdit__c</fullName>
        <formula>NOT(OR((ISPICKVAL(Announcement__r.Status__c,&apos;Created&apos;)),
(ISPICKVAL(Announcement__r.Status__c,&apos;Reviewed&apos;))))</formula>
        <label>Hide Announcement Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideCloseoutEditDelete__c</fullName>
        <formula>Closeout__r.HideEditButton__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideCloseoutEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideDelete__c</fullName>
        <formula>IF(
  NOT(ISNULL(Award__c)), 
  OR(
    ISPICKVAL(Position__c, &apos;Program Manager&apos;),
    Award__r.ProgramManager__c != $User.Id,
    AND(
      NOT(ISPICKVAL(Award__r.Status__c, &apos;Drafted&apos;)),
      NOT(ISPICKVAL(Award__r.Status__c, &apos;Issued&apos;))
    )
  ), 
  false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Delete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditAndDeleteUSBE__c</fullName>
        <formula>AND(OR(ISPICKVAL(BusinessRole__c,&apos;Owner&apos;),Award__r.HideNewBtn__c), Program__r.OrganizationName__c = &apos;USBE&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditAndDeleteUSBE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditAndDelete__c</fullName>
        <formula>ISPICKVAL(BusinessRole__c,&apos;Owner&apos;) || (Award__r.HideNewBtn__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditAndDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditBtn__c</fullName>
        <formula>OR(AND(AmendmentRequest__c!=null,AmendmentRequest__r.HideGranteeEditButton__c),
   AND(Application__c!=null , Application__r.RenderGranteeDelete__c),
   AND(Award__c!=null , HideEditAndDelete__c),
   AND(Closeout__c!=null,HideCloseoutEditDelete__c),
   AND(Announcement__c!=null,HideAnnouncementEdit__c ),
   AND(Program__c!=null,NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;)))
   )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Edit Btn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to help in finding logic for Hiding Edit</description>
        <inlineHelpText>Field to help in finding logic for Hiding Edit</inlineHelpText>
        <label>Hide Edit Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditInApplication__c</fullName>
        <formula>Application__r.ExternalApplicantStatus__c == &apos;Submitted to Grantor&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditInApplication</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideEditNotOwner__c</fullName>
        <formula>Announcement__r.OwnerId != $User.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideEditNotOwner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideIfFinetProgramNotCreated__c</fullName>
        <formula>IF(AND(FINETProgram__c != null, FINETProgram__r.HideIfNotCreated__c), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideIfFinetProgramNotCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideProgramEdit__c</fullName>
        <formula>NOT(ISPICKVAL(Program__r.Status__c,&apos;Created&apos;))  || ISPICKVAL(BusinessRole__c,&apos;Owner&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hide Program Edit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideSiteVisitEditDelete__c</fullName>
        <formula>SiteVisit__r.HideDeleteBtn__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideSiteVisitEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HideStrategicPlanEditDelete__c</fullName>
        <formula>StrategicPlan__r.HideEditDelete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HideStrategicPlanEditDelete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InsertType__c</fullName>
        <label>InsertType</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalUniqueID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Uniquely identifies each record for data migration purpose only. It is auto populated by trigger in before insert context.</description>
        <externalId>true</externalId>
        <label>Internal Unique ID</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsGranteeAppApproved__c</fullName>
        <description>Field to control the hiding of the Editing of Roles and Responsibilities from Editing and deleting</description>
        <formula>Application__r.GranteeDisplayEdit__c</formula>
        <label>Edit Grantee App</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notify__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Notify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PageTemplateConfig__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Page Template Config</label>
        <referenceTo>GNT__PageTemplate__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>RRForms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ParentLookupFieldName__c</fullName>
        <formula>IF(NOT(ISBLANK(AmendmentRequest__c)), &apos;AmendmentRequest__c&apos;, 
IF(NOT(ISBLANK(Application__c)), &apos;Application__c&apos;, 
IF(NOT(ISBLANK(Grant__c)), &apos;Grant__c&apos;, 
IF(NOT(ISBLANK(Announcement__c)), &apos;Announcement__c&apos;, 
IF(NOT(ISBLANK(PreApplication__c)), &apos;PreApplication__c&apos;, 
IF(NOT(ISBLANK(Program__c)), &apos;Program__c&apos;, 
IF(NOT(ISBLANK(ProgressReport__c)), &apos;ProgressReport__c&apos;, 
IF(NOT(ISBLANK(RiskAssessment__c)), &apos;RiskAssessment__c&apos;, 
IF(NOT(ISBLANK(ServiceArea__c)), &apos;ServiceArea__c&apos;, 
IF(NOT(ISBLANK(SiteVisit__c)), &apos;SiteVisit__c&apos;, 
IF(NOT(ISBLANK(StrategicPlan__c)), &apos;StrategicPlan__c&apos;,
IF(NOT(ISBLANK(FINETProgram__c)), &apos;FINETProgram__c&apos;,null))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Lookup Field Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentObjectId__c</fullName>
        <formula>IF(NOT(ISBLANK(Grant__c)), Grant__c, IF(NOT(ISBLANK(AmendmentRequest__c)), AmendmentRequest__c, IF(NOT(ISBLANK(Application__c)), Application__c, IF(NOT(ISBLANK(Award__c)), Award__c, IF(NOT(ISBLANK(Closeout__c)), Closeout__c, IF(NOT(ISBLANK(Announcement__c)), Announcement__c,
IF(NOT(ISBLANK(PreApplication__c)), PreApplication__c, IF(NOT(ISBLANK(Program__c)), Program__c, IF(NOT(ISBLANK(ProgressReport__c)), ProgressReport__c, IF(NOT(ISBLANK(RiskAssessment__c)), RiskAssessment__c, IF(NOT(ISBLANK(ServiceArea__c)), ServiceArea__c, IF(NOT(ISBLANK(SiteVisit__c)), SiteVisit__c, IF(NOT(ISBLANK(StrategicPlan__c)), StrategicPlan__c,IF(NOT(ISBLANK(FINETProgram__c)), FINETProgram__c, null))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ParentObjectId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Project Officer</fullName>
                </value>
                <value>
                    <fullName>Grant Monitor</fullName>
                </value>
                <value>
                    <fullName>Data Evaluator</fullName>
                </value>
                <value>
                    <fullName>Program Manager</fullName>
                </value>
                <value>
                    <fullName>Bureau Chief</fullName>
                </value>
                <value>
                    <fullName>Grant Supervisor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Pre-Application to which this Role and Responsibility belongs</description>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to populate the Program to which this Role and and Responsibility belongs</description>
        <label>Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProgressReport__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Progress Report</label>
        <referenceTo>ProgressReports__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities (Progress Report)</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QueueId__c</fullName>
        <label>Queue ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Responsibility__c</fullName>
        <defaultValue>&quot;Owner of the record&quot;</defaultValue>
        <label>Responsibility</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RiskAssessment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Risk Assessment</label>
        <referenceTo>RiskAssessment__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceArea__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Area</label>
        <referenceTo>ServiceArea__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>RolesandResponsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ShareAccessLevel__c</fullName>
        <formula>IF (IsPickVal( BusinessRole__c , &apos;Informed Person&apos;), &apos;Read&apos;, &apos;Edit&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Access Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareObjectName__c</fullName>
        <formula>IF(NOT(ISBLANK(AmendmentRequest__c)), &apos;AmendmentRequest__Share&apos;, 
IF(NOT(ISBLANK(Application__c)), &apos;Application__Share&apos;, 
IF(NOT(ISBLANK(Grant__c)), &apos;Grant__Share&apos;, 
IF(NOT(ISBLANK(Announcement__c)), &apos;Announcement__Share&apos;, 
IF(NOT(ISBLANK(PreApplication__c)), &apos;PreApplication__Share&apos;, 
IF(NOT(ISBLANK(Program__c)), &apos;Program__Share&apos;, 
IF(NOT(ISBLANK(ProgressReport__c)), &apos;ProgressReports__Share&apos;, 
IF(NOT(ISBLANK(RiskAssessment__c)), &apos;RiskAssessment__Share&apos;, 
IF(NOT(ISBLANK(ServiceArea__c)), &apos;ServiceArea__Share&apos;, 
IF(NOT(ISBLANK(SiteVisit__c)), &apos;SiteVisit__Share&apos;, 
IF(NOT(ISBLANK(StrategicPlan__c)), &apos;StrategicPlan__Share&apos;, null)))))))))))</formula>
        <label>Share Object Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShareParentId__c</fullName>
        <formula>IF(NOT(ISBLANK(AmendmentRequest__c)), AmendmentRequest__c, 
IF(NOT(ISBLANK(Application__c)), Application__c, 
IF(NOT(ISBLANK(Grant__c)), Grant__c, 
IF(NOT(ISBLANK(Announcement__c)), Announcement__c, 
IF(NOT(ISBLANK(PreApplication__c)), PreApplication__c, 
IF(NOT(ISBLANK(Program__c)), Program__c, 
IF(NOT(ISBLANK(ProgressReport__c)), ProgressReport__c, 
IF(NOT(ISBLANK(RiskAssessment__c)), RiskAssessment__c, 
IF(NOT(ISBLANK(ServiceArea__c)), ServiceArea__c, 
IF(NOT(ISBLANK(SiteVisit__c)), SiteVisit__c, 
IF(NOT(ISBLANK(StrategicPlan__c)), StrategicPlan__c, null)))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Share Parent Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowNotifyLink__c</fullName>
        <description>Decision field to specify if the Notify Reviewer link should be displayed or not</description>
        <formula>NOT(OR (ISPICKVAL(BusinessRole__c,&apos;Program Reviewer&apos;), ISPICKVAL(BusinessRole__c,&apos;Fiscal Reviewer&apos;) ) )</formula>
        <label>Show Notify Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SiteVisit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site Visit</label>
        <referenceTo>SiteVisit__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SourceRRId__c</fullName>
        <label>Source RR Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Sent For Review</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StrategicPlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategic Plan</label>
        <referenceTo>StrategicPlan__c</referenceTo>
        <relationshipLabel>Roles and Responsibilities</relationshipLabel>
        <relationshipName>Roles_and_Responsibilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to determine if a task is created for the role.</description>
        <label>Task Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <formula>Name__r.FirstName &amp; &quot; &quot; &amp;  Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Queue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActiveUser__c</fullName>
        <formula>Name__r.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isActiveUser</label>
        <type>Checkbox</type>
    </fields>
    <label>Roles and Responsibilities</label>
    <nameField>
        <displayFormat>RR-{0000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Roles and Responsibilities</pluralLabel>
    <recordTypes>
        <fullName>AmendmentRequest</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Amendment Request.</description>
        <label>Amendment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Application</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Application.</description>
        <label>Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>Award</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Award.</description>
        <label>Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>Closeout</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Closeout.</description>
        <label>Closeout</label>
    </recordTypes>
    <recordTypes>
        <fullName>FINETProgram</fullName>
        <active>true</active>
        <description>This is for the FINET program</description>
        <label>FINETProgram</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grant</fullName>
        <active>true</active>
        <label>Grant</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorAmendmentRequest</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Amendment Request.</description>
        <label>Grantor Amendment Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorAnnouncement</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Announcement.</description>
        <label>Grantor Announcement</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorApplication</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Application.</description>
        <label>Grantor Application</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorAward</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Awards.</description>
        <label>Grantor Award</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorCloseout</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Closeout.</description>
        <label>Grantor Closeout</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorPreApplication</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor PreApplications.</description>
        <label>Grantor PreApplication</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorProgram</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Program.</description>
        <label>Grantor Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorProgressReport</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Progress Reports.</description>
        <label>Grantor Progress Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorRiskAssessment</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Risk Assessment.</description>
        <label>Grantor Risk Assessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorSiteVisit</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Site Visit.</description>
        <label>Grantor Site Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>GrantorStrategicPlan</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantor Strategic Plan and Service Area.</description>
        <label>Grantor Strategic Plan</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Opportunity.</description>
        <label>Opportunity</label>
    </recordTypes>
    <recordTypes>
        <fullName>PreApplication</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Pre-Application.</description>
        <label>PreApplication</label>
    </recordTypes>
    <recordTypes>
        <fullName>Program</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Program.</description>
        <label>Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgramUSBE</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on USBE Programs.</description>
        <label>ProgramUSBE</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgramUploadUSBE</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on USBE Programs</description>
        <label>ProgramUploadUSBE</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProgressReport</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Progress Report.</description>
        <label>Progress Report</label>
    </recordTypes>
    <recordTypes>
        <fullName>RiskAssessment</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Risk Assessment.</description>
        <label>RiskAssessment</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteVisit</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee SiteVisit.</description>
        <label>Site Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>StrategicPlan</fullName>
        <active>true</active>
        <description>This record type can be used for Roles and Responsibilities on Grantee Strategic Plan and Service Area.</description>
        <label>Strategic Plan</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Level_3_and_above_is_approver</fullName>
        <active>true</active>
        <description>User with Level 3 and above can only be chosen as Approver</description>
        <errorConditionFormula>If(AND( Name__c !=null,  OR( ISPICKVAL( BusinessRole__c ,&apos;Program Approver&apos;) , ISPICKVAL( BusinessRole__c ,&apos;Fiscal Approver&apos;) ) , VALUE( Text(Name__r.Level__c ))&lt; VALUE(  $Setup.GNT__GlobalConfig__c.MinimumApprovalLevel__c ) ),true,false)</errorConditionFormula>
        <errorMessage>Assigned users for the approval role do not have organizational approval authority (level). Please pick a different user or contact your administrator.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Position_cannot_be_blank</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(TEXT(Position__c)) || (TEXT(Position__c) = &apos;None&apos;)</errorConditionFormula>
        <errorMessage>Position is required field</errorMessage>
    </validationRules>
</CustomObject>